# fastapi-django-template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  pre-commit-autoupdate.yml
api/: main.py
api/api_v1/: api.py
api/api_v1/endpoints/: cities.py  posts.py
api/tests/: test_api.py
cities/: admin.py  schemas.py
cities/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  router.py  routes.py  schemas.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_blogpost_authors_blogpost_user.py
templates/: base.html  index.html
users/: admin.py  models.py  router.py  schemas.py
users/migrations/: 0001_initial.py  0002_remove_user_posts.py  0003_alter_user_password.py  0004_user_posts.py
