[project]
name = "fastapi-django-template"
version = "0.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.1.3",
  "fastapi>=0.115.5",
  "uvicorn>=0.32.0",
  "uvloop>=0.21.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]>=3.2.3",
  "argon2-cffi>=23.1.0",
  "asgi-correlation-id>=4.3.4",
  "python-jose>=3.3.0",
  "rich>=13.9.4",
  "typer>=0.13.1",
  "email-validator>=2.2.0",
  "sentry-sdk[fastapi]>=2.18.0",
  "django-allauth[mfa,saml,socialaccount,steam]>=65.2.0",
  "django-htmx>=1.21.0",
  "pillow>=11.0.0",
  "django-feather>=0.3.0",
  "django-widget-tweaks>=1.5.0",
  "dj-svg>=0.3.1",
  "whitenoise>=6.8.2",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.7.4",
  "basedpyright>=1.21.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-sugar>=1.0.0",
  "requests-mock>=1.12.1",
  "pytest-mock>=3.14.0",
  "django-debug-toolbar>=4.4.6",
  "snoop>=0.6.0",
  "django-watchfiles>=1.0.0",
  "django-browser-reload>=1.17.0",
]

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.ruff]
line-length = 88
exclude = ['.git', '__pycache__', '__init__.py', '.mypy_cache', '.pytest_cache']
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C4", # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long
  "C901", # Comprehension is too complex (11 > 10)
  "W191", # indentation contains tabs
  "E402",
]
unfixable = ["F841"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
